# opm

./: .gitattributes  .gitignore  .gitmodules  INFORMATION  LICENSE  README.md  env  install-prefix.sh  install.sh  library.sh  profile  profile.sh  project.dic  shellcheck.sh
.claude/: settings.json
etc/alacritty/: alacritty.toml  alacritty.yml  install-alacritty-cargo.sh  install-dependencies-arch.sh  install-dependencies-debian.sh  install-desktop-entry.sh
etc/awk/: test-term-colors.awk
etc/boilerplate/: install.sh
etc/boilerplate/python/: Dockerfile  MANIFEST.in  README.md  black.sh  build-docker.sh  build-pyinstaller.sh  ci.sh  clean.sh  flake8.sh  isort.cfg  isort.sh  main.py  mypy.sh  pytest.ini  python  requirements.main.txt  setup.cfg  uninstall.sh
etc/boilerplate/python/%PROJECT_LOWER%/: __main__.py  arguments.py  entrypoint.py  variables.py
etc/boilerplate/python/%PROJECT_LOWER%/aio/: run.py
etc/boilerplate/python/%PROJECT_LOWER%/apps/: __init__.py  app_base.py  default.py
etc/boilerplate/python/%PROJECT_LOWER%/apps/client/: main.py
etc/boilerplate/python/%PROJECT_LOWER%/apps/server/: main.py
etc/boilerplate/python/%PROJECT_LOWER%/colors/: __init__.py
etc/boilerplate/python/%PROJECT_LOWER%/logging/: logging.py
etc/boilerplate/python/tester/: test_entrypoint.py
etc/clang-format/: clang-format-osom  run.sh  test.cpp
etc/claude/: settings.json
etc/conky/: conky.lua  download-conky-appimage.sh
etc/coturn/: Dockerfile
etc/crawling/: crawling.py  webcopy.py
etc/cuda/: 01-setup-cuda-9.2.148.sh  02-install-cuda-9.2.148.sh
etc/dependencies/: macosx.sh  ubuntu-14.04.sh  ubuntu-18.04.sh
etc/docker/: Dockerfile.ffmpeg  add-docker-group.sh  docker-nvidia-smi.sh  install-docker-compose-linux.sh  install-docker-ubuntu-18.04-x86_64.sh  install-docker-ubuntu-x86_64.sh  install-nvidia-docker-ubuntu-18.04-x86_64.sh  install-nvidia-docker.sh  local-ubuntu-dockerfile  local-ubuntu.sh  obuntu-dockerfile  tbag-ffmpeg4-pm2-dockerfile
etc/dwm/: dwm.c  dwm.h  install.sh
etc/ffmpeg/: build-ffmpeg-docker.sh
etc/gdb/: gdbinit
etc/git/: gitconfig
etc/grub/: README.md
etc/hyper/: hyper.js  hyper.linux.js  hyper.mac.js
etc/i3/: config
etc/install.d/: alacritty.sh  claude.sh  font.sh  fonts.sh  gdb.sh  git.sh  i3.sh  i3.sh.disable  lldb.sh  neobundle.sh  nerd-font.sh  opy.sh  profile.sh  tmux.sh  tpm.sh  vim.sh  x11.sh  xmonad.sh
etc/library.d/: 00_boost.sh  00_protobuf.sh  00_zlib.sh  01_jpeg.sh  01_libpng.sh  02_freetype.sh  03_ogg.sh  04_flac.sh  04_vorbis.sh  10_sdl2.sh  11_sdl2_image.sh  11_sdl2_mixer.sh  11_sdl2_ttf.sh  30_opencv.sh  boost.sh  ffmpeg.sh  flac.sh  freetype.sh  general-build  gflags.sh  glog.sh  gtest.sh  hdf5.sh  jpeg.sh  leveldb.sh  libfdk-aac.sh  libpng.sh  libuv.sh  live555.sh  lmdb.sh  ogg.sh  openblas.sh  opencv.sh  opencv2.sh  opencv3.sh  openh264.sh  protobuf.sh  sdl2.sh  sdl2_image.sh  sdl2_mixer.sh  (+5 more)
etc/lldb/: lldbinit
etc/n/: download-n.sh  download.sh
etc/nebula/: config.lighthouse.example.yml  config.node.example.yml  create-cert.sh  nebula.service  sign-node.sh
etc/nodejs/: install-node-lts-ubuntu.sh  ubuntu.sh
etc/nvidia/: README.md  cuda-toolkit-install.md  nvidia-driver-install.md  service-gdm3-stop.sh  systemctl-gdm3-stop.sh
etc/pip/: install-pip.sh  install-requirements.sh
etc/profile.d/: cscope.sh  editor.sh  fly.sh  fzf.sh  go.sh  golang.sh  grep.sh  locale.sh  ls.sh  ps1.sh  rust.sh  sudo.sh  tbag.sh  test.sh  tparty.sh  var.sh
etc/server/: .gitignore  00-traefik-compose.yml  00-traefik-install.sh  00-traefik-template.toml  01-postfix-compose.yml  02-traefik-local-compose.yml  02-traefik-local-install.sh  02-traefik-local-template.toml  10-portainer-compose.yml  10-portainer-install.sh  11-nexus-compose.yml  11-nexus-install.sh  20-mediawiki-backup.sh  21-onlyoffice-compose.yml  21-onlyoffice-install.sh  22-nextcloud-install.sh  23-gitlab-compose.yml  23-gitlab-install.sh  23-gitlab-runner-register.sh  30-nexus-compose.yml  30-nexus-install.sh  50-cloud9-run.sh  c9-compose.yml  c9-install.sh  c9-run.sh  gitlab-compose.yml  gitlab-install.sh  (+29 more)
include/: header.hpp
src/opwm/: CMakeLists.txt  draw.h  dwm.c  install.sh  util.c  util.h  wmname.c
tparty/: .gitignore  00-dependencies-debian.sh  00-prefix.sh  01-external.sh  02-clang.sh  03-cmake.sh  04-jemalloc.sh  10-zlib.sh  11-sqlite.sh  20-openssl.sh  21-uv.sh  22-event.sh  30-openh264.sh  31-vpx.darwin.patch  31-vpx.sh  32-live555.sh  33-coturn.sh  40-ffmpeg.sh  41-opencv.sh  50-python3.7.3-linux.patch  50-python3.sh  51-pip3-requirements.sh  52-pip3-pytorch.sh  60-webrtc.sh  70-st.config.h  70-st.darwin.patch  70-st.sh  70-tbag.sh  71-c2core-docker.sh  90-tbag.sh  __config__  _common.sh  _prefix.sh  build-all.sh  compress-all.sh  decompress-all.sh  erase-cache.sh  ffmpeg.sh  openh264.sh  vpx.sh  (+1 more)
(+377 files in other folders)
