[metadata]
name = %PROJECT_NAME%
description = %PROJECT_DESC%
version = attr: %PROJECT_LOWER%.__version__
author = %USER_NAME%
author_email = %USER_EMAIL%
maintainer = %USER_NAME%
maintainer_email = %USER_EMAIL%
url = https://github.com/%GITHUB_ID%/%PROJECT_NAME%
project_urls =
    GitHub: issues = https://github.com/%GITHUB_ID%/%PROJECT_NAME%/issues
    GitHub: repo = https://github.com/%GITHUB_ID%/%PROJECT_NAME%
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
%PROJECT_LOWER%.assets = .gitignore
%PROJECT_LOWER%.www = .gitignore

[options.entry_points]
console_scripts =
    %PROJECT_LOWER% = %PROJECT_LOWER%.entrypoint:main
